# aho_corasick

./: CMakeLists.txt  ac.cc  ac.h  ac_test.cc
